# django-site-utils

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README  README.rst  manage.py  requirements.in  requirements.txt  requirements27.txt  requirements35.txt  requirements36.txt  requirements37.txt  requirements38.txt  requirements39.txt  setup.cfg  setup.py  test_requirements.txt  test_suite.py  tox.ini
docs/: Makefile  admin.rst  commands.rst  conf.py  context_processors.rst  index.rst  intro.rst  make.bat  patches.rst  settings.rst  signals.rst  views.rst
requirements/: dev.in  dev.txt  dev35.txt  dev36.txt  dev37.txt  dev38.txt  dev39.txt  test.in  test.txt
site_utils/: __init__.py  admin.py  apps.py  cleanup.py  context_processors.py  defaults.py  fabric.py  handlers.py  models.py  notify.py  patches.py  serializers.py  settings.py  signals.py  urls.py  utils.py  views.py
site_utils/management/commands/: site_cleanup.py  site_config.py  site_dump.py  site_error.py  site_error_page.py  site_load.py  site_notify.py  site_update.py
test_project/: settings.py  urls.py
test_project/templates/admin/: base_site.html  error.html
test_project/test_app/: __init__.py  admin.py  apps.py  conftest.py  models.py  tests.py  urls.py  views.py
test_project/test_app/migrations/: 0001_initial.py
test_project/test_app/templates/: new_site_notify_body.txt  new_site_notify_subject.txt
test_project/test_app/tests/: __init__.py  test_patches.py  test_site_cleanup.py  test_site_config.py  test_site_dump.py  test_site_error.py  test_site_load.py  test_site_notify.py  test_site_update.py  test_site_utils.py
