[bumpversion]
commit = True
current_version = 0.3.5-a0
tag = True
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?:-(?P<pre_release>[a-z]+\d+))?
serialize = 
	{major}.{minor}.{patch}-{pre_release}
	{major}.{minor}.{patch}

[bumpversion:part:pre_release]
optional_value = f0
values = 
	a0
	b0
	b1
	b2
	rc0
	f0

[bumpversion:file:site_utils/__init__.py]

[bumpversion:file:docs/conf.py]

[metadata]
name = Django-Site-Utils
version = attr: site_utils.__version__
author = Nine More Minutes, Inc.
author_email = projects@ninemoreminutes.com
description = Django site-wide management commands and utilities.
long_description = file: README.rst
long_description_content_type = 
keywords = django, site, management
license = BSD
url = https://github.com/ninemoreminutes/django-site-utils/
project_urls = 
	Documentation = https://django-site-utils.rtfd.org/
	Source = https://github.com/ninemoreminutes/django-site-utils/
	Tracker = https://github.com/ninemoreminutes/django-site-utils/issues
classifiers = 
	Development Status :: 3 - Alpha
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 1.11
	Framework :: Django :: 2.0
	Framework :: Django :: 2.1
	Framework :: Django :: 2.2
	Framework :: Django :: 3.0
	Framework :: Django :: 3.1
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Internet :: WWW/HTTP
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = site_utils
include_package_data = True
setup_requires = 
	pytest-runner
	setuptools-twine
tests_require = 
	django>=1.11
	pytest
	pytest-cov
	pytest-django
	pytest-flake8
install_requires = 
	django>=1.11
	six

[check]
metadata = True
restructuredtext = True
strict = True

[clean]
all = True

[egg_info]
tag_build = .dev

[build_sphinx]
source_dir = docs
build_dir = docs/_build
all_files = True
version = attr: site_utils.__version__
release = attr: site_utils.__version__

[upload_sphinx]
upload_dir = docs/_build/html

[upload_docs]
upload_dir = docs/_build/html

[bdist_wheel]
universal = 1

[aliases]
dev_build = clean flake8 test egg_info sdist bdist_wheel twine_check build_sphinx
release_build = clean flake8 test egg_info -b "" sdist bdist_wheel twine_check build_sphinx
test = pytest
ship_it = release_build twine_upload

[pycodestyle]
ignore = E501
exclude = build,dist,docs,.tox,test_project/public

[flake8]
ignore = E501
exclude = build,dist,docs,.tox,test_project/public

[tool:pytest]
DJANGO_SETTINGS_MODULE = test_project.settings
python_files = test*.py
testpaths = site_utils test_project
norecursedirs = .git build dist docs public
flake8-ignore = E501
addopts = --reuse-db --nomigrations --cache-clear --flake8 --cov site_utils --cov-append --cov-report term-missing
